# sam_bench

./: .gitignore  Dockerfile.rocm  Dockerfile.rocm-nightly  Dockerfile.rocm-stable  README.md  main.py  pyproject.toml  pyproject.toml.bak  run_rocm_container.sh  sam_bench.py  sam_bench_amd.py
docs/: gfx1151_strix_halo_sam_findings.md  r9700_rocm_sam_findings.md
results/: latest.csv  r9700_sam_benchmark_results.csv  r9700_sam_benchmark_results.xlsx
results/20260619-110531/: benchmark_results.csv
scripts/: run_docker_benchmark_matrix.sh
